--- a/styles.css
+++ b/styles.css
@@ -29,22 +29,14 @@ main > input {
 li::selection {
 	background-color: #dddddd;
 }
-/* .todo::before {
-	content: '';
-	position: absolute;
-	right: 52%;
-	top: 28%;
-	border-radius: 100%;
-	width: 0.5em;
-	height: 0.5em;
-	background-color: #000;
-} */
 .todo {
 	background-image: url('circle.svg');
 	background-repeat: no-repeat;
 	overflow-wrap: break-word;
 	background-position: 0;
 	padding-left: 0.7em;
+	display: flex;
+	align-items: center;
 	background-size: 0.4em;
 }
 main > button {
@@ -52,4 +44,11 @@ main > button {
 }
 .remove-button {
 	margin-left: 2%;
+	border-radius: 20%;
+	width: 2.5em;
+	height: 2.5em;
+	background-size: 90%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-image: url('https://www.svgrepo.com/show/154230/trash-can.svg');
 }
